# video_capture_opencv

./: CMakeLists.txt  README.md
src/: cvVideoCapture.cpp
